Fixed home sections paragraph text alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -146,16 +146,20 @@ footer {
     #profile-image, #home p {
         width: 45%;
     }
-
+/* 
     main {
-        margin: 4rem 0;
-    }
+        margin: 2rem 0;
+    } */
 
     #home {
         flex-direction: row-reverse;
         justify-content: space-around;
-        margin: 0 2rem;
+        margin: 4rem 2rem;
         align-items: center;
+    }
+
+    #home p {
+        text-align: left;
     }
 
     #portfolio-projects {
